--- a/index.html
+++ b/index.html
@@ -11,7 +11,33 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-
+  <h1>Calculator</h1>
+ 
+  
+  <div class = "calculator">
+    <div class="result"></div>
+    <div class="buttons">
+      <button class="clear" onclick="clearResult()">AC</button>
+      <button onclick="appendToResult('(')">(</button>
+      <button onclick="appendToResult(')')">)</button>
+      <button onclick="appendToResult('/')">/</button>
+      <button class="num" onclick="appendToResult('7')">7</button>
+      <button class="num" onclick="appendToResult('8')">8</button>
+      <button class="num" onclick="appendToResult('9')">9</button>
+      <button onclick="appendToResult('*')">x</button>
+      <button class="num" onclick="appendToResult('4')">4</button>
+      <button class="num" onclick="appendToResult('5')">5</button>
+      <button class="num" onclick="appendToResult('6')">6</button>
+      <button onclick="appendToResult('-')">-</button>
+      <button class="num" onclick="appendToResult('1')">1</button>
+      <button class="num" onclick="appendToResult('2')">2</button>
+      <button class="num" onclick="appendToResult('3')">3</button>
+      <button onclick="appendToResult('+')">+</button>
+      <button class="num" onclick="appendToResult('0')">0</button>
+      <button class="num" onclick="appendToResult('.')">.</button>
+      <button class="equals" onclick="calculate()">=</button>
+    </div>
+  </div>
   </body>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
