--- a/index.html
+++ b/index.html
@@ -17,34 +17,34 @@
      <div class="buttons">
       <button>Deg</button>
       <button>x!</button>
-      <button onclick="appendToResult('(')">(</button>
-      <button onclick="appendToResult(')')">)</button>
-      <button onclick="appendToResult('%')">%</button>
+      <button>(</button>
+      <button>)</button>
+      <button onclick="handleOperator('%')">%</button>
       <button class="clear" onclick="clearResult()">AC</button>
       <button>sin</button> 
       <button>ln</button> 
       <button class="num" onclick="appendToResult('7')">7</button>
       <button class="num" onclick="appendToResult('8')">8</button>
       <button class="num" onclick="appendToResult('9')">9</button>
-      <button onclick="appendToResult('/')">/</button> 
+      <button onclick="handleOperator('/')">/</button> 
       <button>cos</button> 
       <button>log</button>
       <button class="num" onclick="appendToResult('4')">4</button>
       <button class="num" onclick="appendToResult('5')">5</button>
       <button class="num" onclick="appendToResult('6')">6</button>
-      <button onclick="appendToResult('*')">x</button>
+      <button onclick="handleOperator('*')">x</button>
       <button>tan</button> 
       <button>sqrt</button>
       <button class="num" onclick="appendToResult('1')">1</button>
       <button class="num" onclick="appendToResult('2')">2</button>
       <button class="num" onclick="appendToResult('3')">3</button>
-      <button onclick="appendToResult('-')">-</button>
+      <button onclick="handleOperator('-')">-</button>
       <button>EXP</button> 
       <button>x^y</button>
       <button class="num" onclick="appendToResult('0')">0</button>
-      <button class="num" onclick="appendToResult('.')">.</button>
+      <button class="num" onclick="handleOperator()">.</button>
       <button class="equals" onclick="calculate()">=</button>
-      <button onclick="appendToResult('+')">+</button>
+      <button onclick="handleOperator('+')">+</button>
     </div>
 
     </div>
