Getting NaN from add operation, implementing calculator calculation flow

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <button>EXP</button> 
       <button>x^y</button>
       <button class="num" onclick="appendToResult('0')">0</button>
-      <button class="num" onclick="handleOperator()">.</button>
+      <button class="num" onclick="handleOperator('.')">.</button>
       <button class="equals" onclick="calculate()">=</button>
       <button onclick="handleOperator('+')">+</button>
     </div>
