--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    
   </head>
   <body>
-  <h1>Calculator</h1>
   <div class = "calculator">
     <input id="calculatorInput" style = "width:100%;" type = "text" class="result" readonly>
      <div class="buttons">
@@ -43,7 +42,7 @@
       <button>x^y</button>
       <button class="num" onclick="appendToResult('0')">0</button>
       <button class="num" onclick="handleOperator('.')">.</button>
-      <button class="equals" onclick="calculate()">=</button>
+      <button class="equals" onclick="handleOperator('=')">=</button>
       <button onclick="handleOperator('+')">+</button>
     </div>
 
